<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/memo_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/memo_description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/memo_title_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/memo_description_container">

        <TextView
            android:id="@+id/choose_location_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="40.12312 41.12321" />

        <Button
            android:id="@+id/choose_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorAccent"
            android:text="@string/choose_location" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
